2008-01-10  Jorge Gonzalez  <jorgegonz@svn.gnome.org>

	* es.po: Updated Spanish translation.

2008-01-09  Jorge Gonzalez  <jorgegonz@svn.gnome.org>                          

	* es.po: Updated Spanish translation.

2008-01-06  Jorge Gonzalez  <jorgegonz@svn.gnome.org>

	* es.po: Updated Spanish translation.

2008-01-05  Stéphane Raimbault  <stephane.raimbault@gmail.com>

	* fr.po: Updated French translation by Marc Lorber, Henry-Nicolas
	Tourneur and Stéphane Raimbault.

2008-01-03  Kjartan Maraas  <kmaraas@gnome.org>

	* POTFILES.in: Fix this.
	* nb.po: Updated Norwegian bokmål translation.

2007-12-31  Yannig Marchegay <yannig@marchegay.org>

	* oc.po: Updated Occitan translation.

2007-12-24  Djihed Afifi <djihed@gmail.com> 

	* ar.po: Updated Arabic Translation by Djihed Afifi.

2007-12-19  Ignacio Casal Quinteiro  <nacho.resa@gmail.com>

	* gl.po: Updated Galician Translation.

2007-12-19  Kjartan Maraas  <kmaraas@gnome.org>

	* nb.po: Updated Norwegian bokmål translation.

2007-12-17  Espen Stefansen <espens@svn.gnome.org>

	* nb.po: Updated Norwegian Bokmål translation.

2007-12-16  Takeshi AIHANA <takeshi.aihana@gmail.com>

	* ja.po: Updated Japanese translation.

2007-12-13  Jorge Gonzalez  <jorgegonz@svn.gnome.org>  

        * es.po: Updated Spanish translation.   

2007-12-11  Jorge Gonzalez  <jorgegonz@svn.gnome.org>

        * es.po: Updated Spanish translation.

2007-12-10  Mohammad DAMT  <mdamt@gnome.org>

	* id.po: Added Indonesian translation by Andika Triwidada
	<andika@gmail.com>
	* LINGUAS: Added id.

2007-12-06  Jorge Gonzalez  <jorgegonz@svn.gnome.org>

        * es.po: Updated Spanish translation.

2007-11-13  Danishka Navin <danishka@gmail.com>

	* si.po: Added Sinhala Translation by Danishka Navin.
	* LINGUAS: Added si.
	
2007-12-04  Andre Klapper  <a9016009@gmx.de>

	* de.po: Updated German translation.

2007-11-30  Jorge Gonzalez  <jorgegonz@svn.gnome.org>

        * es.po: Updated Spanish translation.
