@@ -106,19 +106,12 @@ plugins/gtodo/preferences.c
 plugins/gtodo/tasklists.c
 plugins/gtodo/todo_db.c
 plugins/gtodo/tray-icon.c
-plugins/indent/indent-dialog.c
-plugins/indent/indent.glade
-plugins/indent/plugin.c
-plugins/indent/indent-dialog.c
-plugins/indent/indent.glade
-plugins/indent/plugin.c
 plugins/macro/anjuta-macro.glade
 plugins/macro/macro-actions.c
 plugins/macro/macro-db.c
 plugins/macro/macro-dialog.c
 plugins/macro/macro-edit.c
 plugins/macro/macro-util.c
-plugins/macro/macros.xml
 plugins/macro/plugin.c
 plugins/message-view/anjuta-message-manager-plugin.glade
 plugins/message-view/anjuta-msgman.c
@@ -164,7 +157,6 @@ plugins/sourceview/anjuta-document.c
 plugins/sourceview/anjuta-encodings.c
 plugins/sourceview/sourceview.c
 plugins/sourceview/anjuta-editor-sourceview.glade
-plugins/sourceview/sourceview-print.c
 plugins/subversion/anjuta-subversion.glade
 plugins/subversion/plugin.c
 plugins/subversion/subversion-add-dialog.c
