@@ -7,6 +7,10 @@ plugins/build/compile.c
 plugins/build/compiler_options.c
 plugins/build/configurer.c
 plugins/build/executer.c
+plugins/indent/indent-dialog.c
+plugins/indent/indent.glade
+plugins/indent/plugin.c
+plugins/macro/macros.xml
 plugins/profiler/gprof-function-call-chart-view.c
 plugins/profiler/main.c
 plugins/project-wizard/templates/anjuta-plugin/src/plugin.c
@@ -15,6 +19,7 @@ plugins/project-wizard/templates/gnome/src/main.c
 plugins/project-wizard/templates/gnome/src/project.glade
 plugins/project-wizard/templates/gtk/src/project.glade
 plugins/project-wizard/templates/gtkmm/src/project.glade
+plugins/sourceview/sourceview-print.c
 libegg/egg-combo-action.c
 libegg/egg-entry-action.c
 libegg/eggcellrendererkeys.c
